Fixed centering and text getting cut off

--- a/autoscheduler/frontend/src/components/SchedulingPage/Schedule/MeetingCard/MeetingCard.css
+++ b/autoscheduler/frontend/src/components/SchedulingPage/Schedule/MeetingCard/MeetingCard.css
@@ -44,5 +44,5 @@
     overflow: hidden;
     text-overflow: ellipsis;
     width: 100%;
-    height: 100%;
+    flex-shrink: 0;
 }
